# simpleProjects

./: README.md
C/: README.md
C++/: MakeFile  README.md
C++/CPPFeatures/: Makefile  main.cpp  res
C++/FTPServer/: Makefile  client.cpp  file.cpp  ftp.hpp  main  main.cpp  protocol.cpp
C++/myCli-Phonebook/: Makefile  res  types.h
C++/threadingAndConcurrency/: Makefile  res  thread1.cpp  thread2.cpp  thread3.cpp  thread4.cpp  thread5.cpp  thread6.cpp
C++/treeCommand/: Makefile  main  main.cpp
C/bitMap/: main.cpp
C/justPlaying/: hello.c  res  test.c
C/linuxCommands/: Makefile  ls_command.c  res
C/minFtpServer/: Makefile  main.c
C/passwordGenerator/: Makefile  main.c  res
C/simplePasswordGenerator/: Makefile  main.c  password.h  res
C/snakeGame/: Makefile  res  snakeGame.c
DataStructures/: DataStructures.slnx
DataStructures/DataStructures/: DataStructures.vcxproj  DataStructures.vcxproj.filters  dlist.hpp  llist.cpp  llist.hpp  main.cpp  raiiLList.hpp
GameFromScratch/: main.cpp
Hackerrank/: 00_multiplesOf3And5.cpp  01evenFibonacciNum.cpp  02sumSquareDifference.cpp  03LargestProduct.cpp  Makefile  README.md  binary_search.cpp  res
PhysicsPlay/particleSimulator/: CMakeLists.txt  main.cpp  run.bat  run.sh
PhysicsPlay/particleSimulator/.cache/clangd/index/: main.cpp.2CD9BC65E9AFC1D1.idx
advanceC/: 02bitMask.c  Makefile  res
adventOfCode/: pyproject.toml
adventOfCode/code/: d1.py  d2.py  d3.py
adventOfCode/data/: d1.txt
assembly/risc-v/: README.md
cPlusPlus/myCli-Phonebook/: contacts.txt  main.cpp
cPlusPlus/oop_cpp/: main.cpp  res
dataStructure/: Makefile  llist.cpp  res
java/InventorySystem/: pom.xml
java/InvestBank/: pom.xml
java/LeaveRequest/: pom.xml
java/LeaveRequestProcessor/: pom.xml
java/MyLeaveProcesser/: pom.xml
java/Student/: pom.xml
java/leaveProcessor/: pom.xml
java/p/: pom.xml
leetCode/: 00_two_sum.cpp  01_palidrome.cpp  02_medianOfTwoArrays.cpp  02_mediumOfTwoArrays.cpp  03_longestPalindromicSubstring.cpp  Makefile  res
machine_learning/: Untitled.ipynb  pyproject.toml  requirements.txt
machine_learning/3290/: Assignment3.ipynb  Assignment4.ipynb  Untitled.ipynb  Untitled1.ipynb  assignment2.ipynb  assing4.ipynb
machine_learning/3290/.ipynb_checkpoints/: Assignment3-checkpoint.ipynb  Assignment4-checkpoint.ipynb  Untitled-checkpoint.ipynb
machine_learning/4260/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  output.csv  pyproject.toml
machine_learning/practice/: Untitled1.ipynb  assignments.ipynb
mongoDB/csis3300/: playground-1.mongodb.js  playground-10.mongodb.js  playground-11.mongodb.js  playground-12.mongodb.js  playground-13.mongodb.js  playground-14.mongodb.js  playground-2.mongodb.js  playground-20.mongodb.js  playground-21.mongodb.js  playground-3.mongodb.js  playground-4.mongodb.js  playground-5.mongodb.js  playground-6.mongodb.js  playground-7.mongodb.js  playground-8.mongodb.js  playground-9.mongodb.js  playground138.mongodb.js
myCli-Phonebook/: contacts.txt  main.cpp  res  types.h
my_devgames/3D_sample1/: Makefile  main.cpp  res
my_devgames/3d_raylib/: Makefile  main  main.cpp
my_devgames/GlassRotation/: CMakeLists.txt  run.sh
my_devgames/GlassRotation/.cache/clangd/index/: main.cpp.4478A9FE05465558.idx
my_devgames/GlassRotation/src/: main.cpp
my_devgames/SDL_Sample/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  launch.vs.json
my_devgames/SDL_Sample/.opencode/skills/cmake-builder/: skill.md
my_devgames/SDL_Sample/SDL_Sample/: CMakeLists.txt  SDL_Sample.cpp  SDL_Sample.h
my_devgames/SnakeGame/: Makefile  main.cpp
my_devgames/Tetris/: Makefile  main.cpp
my_devgames/VulcanGlfw/: CMakeLists.txt  first_app.cpp  first_app.hpp  lve_window.cpp  lve_window.hpp  main.cpp
my_devgames/VulcanGlfw/shaders/: simple_shader.frag  simple_shader.vert
my_devgames/VulkanGlfw/: CMakeLists.txt  first_app.hpp  lve_window.cpp  lve_window.hpp  main.cpp  my_engine.hpp  run.sh
my_devgames/VulkanGlfw/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
my_devgames/VulkanGlfw/src/: first_app.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp
my_devgames/VulkanLearn/1-gettingStarted/: CMakeLists.txt  main.cpp
my_devgames/WindowConsole/: Makefile  main.cpp
my_devgames/amazingGame/: Actor.h  CMakeLists.txt  Collectable.h  CommandListener.h  DisplayOverlay.h  DrawPhysics.cpp  DrawPhysics.h  GameOverlay.cpp  GameOverlay.h  MainMenuScene.h  PhysicsContactHandler.cpp  PhysicsContactHandler.h  PhysicsObject.h  Readme.md  Resources.txt  Scarfy.cpp  Scarfy.h  ScarfyScene.h  Scene.cpp  Scene.h  TextureAtlas.cpp  TextureAtlas.h  TileMap2DLoader.cpp  TileMap2DScene.h
my_devgames/astroidGame/: main.c
my_devgames/fightClash/part3/: CMakeLists.txt  Makefile  baseCharacter.cpp  baseCharacter.h  character.cpp  character.h  enemy.cpp  enemy.h  main.cpp  prop.cpp  prop.h  res
my_devgames/getting_started/: CMakeLists.txt  main.cpp  makefile  res
my_devgames/mySdlGame/: CMakeLists.txt  animation.h  g_window.hpp  gameobject.h  lve_window.h  main.cpp  run.sh  timer.h
my_devgames/openglProj/: CMakeLists.txt
my_devgames/openglProj/glad/: glad.c  glad.h
my_devgames/pygameCpu/: main.py  pyproject.toml
my_devgames/raylib-2d-challenge-part-12/: Actor.cpp  CharacterActor.cpp  CharacterActor.h  Collectable.cpp  CommandListener.cpp  Common.h  DisplayOverlay.cpp  ScarfyScene.cpp  (+10 more)
my_devgames/raylib_3D/: CMakeLists.txt  main.cpp  renderer.hpp  run.bat
my_devgames/raylib_3D/src/: main.cpp  renderer.cpp  renderer.hpp
my_devgames/sample/: CMakeLists.txt  CMakePresets.json  opencode.json
my_devgames/sample/.opencode/skills/cmake-builder/: skill.md
my_devgames/sample/SDL_Sample/: CMakeLists.txt  SDL_Sample.cpp  SDL_Sample.h
my_graphics/: README.md
my_graphics/triangleT/: CMakeLists.txt  run.sh
my_graphics/triangleT/shaders/: shader.frag  shader.vert
my_graphics/triangleT/src/: main.cpp  triangle.cpp
oop_cpp/: Makefile  students.txt
(+298 files in other folders)
