[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.3"
numpy = "^2.3.4"
jupyter = "^1.1.1"
ipykernel = "^7.0.1"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
imblearn = "^0.0"
nltk = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
