[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
numpy = "^2.3.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
tensorflow = "^2.20.0"
jupyter = "^1.1.1"
ipykernel = "^7.1.0"
yfinance = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
